iPad alignment fixing

--- a/src/styles/LandingPage/LandingPage.css
+++ b/src/styles/LandingPage/LandingPage.css
@@ -163,10 +163,8 @@ only screen and (min-device-width: 768px) and (max-device-width: 1023px) and (or
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    column-gap: -30px !important;
-    row-gap: -30px !important;
+    column-gap: 0px !important;
   }
-  
   .iPadWdth{
     width: 70%;
   }
@@ -200,7 +198,6 @@ only screen and (-webkit-min-device-pixel-ratio: 2) and (min-device-width: 768px
     align-items: center;
     justify-content: center;
     column-gap: -30px !important;
-    row-gap: -30px !important;
   }
   .iPadWdth{
     width: 70%;
